nwpolicy/allow-mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mysql-ingress
  labels:
    policy: allow-mysql-ingress
spec:
  podSelector:
    matchLabels:
      run: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: busybox
