nwpolicy/deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  labels:
    app: deny-all-egress
spec:
  podSelector:
    matchLabels:
      app: busybox
  policyTypes:
    - Egress
