nwpolicy/deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  labels:
    policy: deny-all-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
